# meson

./: run_project_tests.py
mesonbuild/: build.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/compilers/: __init__.py  antlr4.py  compilers.py  detect.py
test cases/antlr4/1 exist c#/: meson.build  test.json
test cases/antlr4/1 exist cpp/: meson.build  test.json
test cases/antlr4/1 exist dart/: meson.build  test.json
test cases/antlr4/1 exist go/: meson.build  test.json
test cases/antlr4/1 exist java/: meson.build
test cases/antlr4/1 exist js/: meson.build  test.json
test cases/antlr4/1 exist js/libdir/: meson.build
test cases/antlr4/1 exist php/: edn.g4  meson.build  test.json
test cases/antlr4/1 exist php/libdir/: edn.interp  ednLexer.tokens  ednParser.java
test cases/antlr4/1 exist python/: meson.build  test.json
test cases/antlr4/1 exist swift/: meson.build  test.json
test cases/antlr4/1 exist swift/libdir/: ednBaseListener.java  ednLexer.interp
test cases/antlr4/2 basic/: test.json
test cases/antlr4/2 basic/libdir/: ednLexer.java
test cases/antlr4_cpp/1 basic/: meson.build  test.json
test cases/antlr4_cpp/1 basic/libdir/: ednListener.java
