project(
  'basic antlr4 project',
  ['antlr4', 'cpp'],
  default_options : ['warning_level=3']
)

# antlr4_mod = import('antlr4')
# a4 = antlr4_mod.find_installation()
# a4_dep = a4.dependency(required : true)
# if not a4_dep.found()
#     error('MESON_SKIP_TEST: Antlr4 not found.')
# endif

# lib = static_library(
#     'edn',
#     'edn.g4',
# )

# subdir('libdir')
#
# test('Antlr4 tester',
#   antlr4,
#   args : [files('edn.g4')]
# )
